Moved some methods + minor fixes